[package]
name = "enr"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2021"
version = "0.12.1"
description = "Rust implementation of Ethereum Node Record (ENR) EIP778"
readme = "./README.md"
keywords = ["ethereum", "enr", "record", "EIP778", "node"]
repository = "https://github.com/sigp/enr"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
exclude = [".gitignore", ".github/*"]

[dependencies]
alloy-rlp = "0.3.4"
base64 = "0.21"
bytes = "1"
hex = "0.4.3"
log = "0.4.21"
rand = "0.8"
zeroize = "1.8.1"
sha3 = "=0.11.0-pre.4"
k256 = {branch = "master", features = ["ecdsa"], optional = true , git = "https://github.com/ArnoldTumukunde/elliptic-curves.git"}
serde = { version = "1.0", features = ["derive"], optional = true }
ed25519-dalek = { branch = "main", optional = true, features = ["rand_core"], git = "https://github.com/ArnoldTumukunde/ed25519-dalek.git" }
secp256k1 = { version = "0.29", optional = true, default-features = false, features = [
    "global-context",
] }

[dev-dependencies]
alloy-rlp = { version = "0.3.4", features = ["derive"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }
serde_json = "1.0"

[features]
default = ["serde", "k256"]
serde = ["dep:serde"]
k256 = ["dep:k256"]
ed25519 = ["dep:ed25519-dalek"]
secp256k1 = ["rust-secp256k1"]
rust-secp256k1 = ["dep:secp256k1"]

[lib]
name = "enr"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
